--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,7 +25,7 @@
             <!--empty for search text box later-->
         </div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
-                class="header-links align-middle" style="text-align: center; color: #999" href="#">Library</a></div>
+                class="header-links align-middle" style="text-align: center; color: #999" href="http://localhost:4000/library">Library</a></div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
                 class="align-middle header-links" style="text-align: center; color: #999" href="#">Events</a></div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
@@ -45,11 +44,11 @@
             <ul class="dropdown-menu"
                 style="padding: 0; margin-top:10px; border: none; border-radius: 0;border-bottom-right-radius: .25rem;border-bottom-left-radius: .25rem;background-color: #FFF">
                 <li style="padding: 10px ;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666"
-                                                                                                href="#"
+                                                                                                href="http://localhost:4000/student/mycourses"
                                                                                                 class="header-links">My
                     Courses</a></li>
                 <li style="padding: 10px;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666"
-                                                                                               href="#"
+                                                                                               href="http://localhost:4000/student/mybookmarks"
                                                                                                class="header-links">My
                     Bookmarks</a></li>
                 <li style="padding: 10px;padding-left: 20px;"><a onclick="logoutfn()" style="color: #666"
@@ -85,7 +84,7 @@
                 </div>
 
                 <!--<div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">-->
-                    <!--<h5 style="font-size: 18px;margin-bottom: 7px;font-weight: 500;color: #A4A5A9">1. Functions<br></h5>-->
+                <!--<h5 style="font-size: 18px;margin-bottom: 7px;font-weight: 500;color: #A4A5A9">1. Functions<br></h5>-->
 
                 <!--</div>-->
 
@@ -105,12 +104,13 @@
                     <h5 id="nameOfTheMiniCourse" style=";margin-bottom: 7px; color: #444; font-weight: 500"><br></h5>
                     <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
                         <img src="/images/icons/timer.png">&nbsp;<span id="durationOfMiniCourse"
-                            style="margin-top: 5px; font-weight: 500"></span>&nbsp;&nbsp;
+                                                                       style="margin-top: 5px; font-weight: 500"></span>&nbsp;&nbsp;
                         <img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"
                                                                      style="margin-top: 5px; font-weight: 500"></span>
                     </p>
                     <br>
-                    <p id="lessonDescription" style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
+                    <p id="lessonDescription"
+                       style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
 
                     </p>
 
@@ -125,7 +125,7 @@
                         </div>
                         <div class="col-sm-10">
                             <p style="color: #848589;font-size: 14px;"><b><span id="nameOfTheTeacher"></span></b><br>
-                            <span id="teacherDescription"></span></p>
+                                <span id="teacherDescription"></span></p>
                         </div>
                     </div>
                 </div>
