--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -25,7 +25,7 @@
             <!--empty for search text box later-->
         </div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
-                class="header-links align-middle" style="text-align: center; color: #999" href="#">Library</a></div>
+                class="header-links align-middle" style="text-align: center; color: #999" href="http://localhost:4000/library">Library</a></div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
                 class="align-middle header-links" style="text-align: center; color: #999" href="#">Events</a></div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
@@ -43,13 +43,9 @@
             &nbsp;&nbsp;John Doe <span class="caret"></span></a>
             <ul class="dropdown-menu"
                 style="padding: 0; margin-top:10px; border: none; border-radius: 0;border-bottom-right-radius: .25rem;border-bottom-left-radius: .25rem;background-color: #FFF">
-                <li style="padding: 10px ;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666"
-                                                                                                href="#"
-                                                                                                class="header-links">My
+                <li style="padding: 10px ;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666" href="http://localhost:4000/student/mycourses" class="header-links">My
                     Courses</a></li>
-                <li style="padding: 10px;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666"
-                                                                                               href="#"
-                                                                                               class="header-links">My
+                <li style="padding: 10px;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666" href="http://localhost:4000/student/mybookmarks" class="header-links">My
                     Bookmarks</a></li>
                 <li style="padding: 10px;padding-left: 20px;"><a onclick="logoutfn()" style="color: #666"
                                                                  class="header-links">Logout</a>
@@ -74,7 +70,8 @@
                 <div class="col-xs-12 col-sm-6 offset-3 text-center">
                     <h1 style="color: floralwhite" id="miniCourseName"></h1>
                     <br>
-                    <p id="miniCourseDescription" style="color: floralwhite; font-size: x-large">Browse our collection of courses created by the
+                    <p id="miniCourseDescription" style="color: floralwhite; font-size: x-large">Browse our collection
+                        of courses created by the
                         best teachers of India</p>
 
                 </div>
@@ -136,74 +133,75 @@
                 <div id="lectures" class="row"
                      style="background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem; margin-bottom: 30px">
                     <!--<div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">-->
-                        <!--<div class="row" style="margin-bottom: 0px">-->
-                            <!--<div class="col-sm-1" style="padding-left: 0px">-->
-                                <!--<img src="/images/icons/movie.png">-->
-                            <!--</div>-->
-                            <!--<div class="col-sm-10">-->
-                                <!--<h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>-->
-                                <!--<p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">-->
-                                    <!--<img src="/images/icons/timer.png">&nbsp;<span-->
-                                        <!--style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;-->
-                                    <!--<img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"-->
-                                                                                 <!--style="margin-top: 5px; font-weight: 500">12K</span>-->
-                                <!--</p>-->
-                            <!--</div>-->
-                            <!--<div class="col-sm-1">-->
-                                <!--<img src="/images/icons/arrow-right-drop-circle-green.png">-->
-                            <!--</div>-->
-                        <!--</div>-->
+                    <!--<div class="row" style="margin-bottom: 0px">-->
+                    <!--<div class="col-sm-1" style="padding-left: 0px">-->
+                    <!--<img src="/images/icons/movie.png">-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-10">-->
+                    <!--<h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>-->
+                    <!--<p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">-->
+                    <!--<img src="/images/icons/timer.png">&nbsp;<span-->
+                    <!--style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;-->
+                    <!--<img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"-->
+                    <!--style="margin-top: 5px; font-weight: 500">12K</span>-->
+                    <!--</p>-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-1">-->
+                    <!--<img src="/images/icons/arrow-right-drop-circle-green.png">-->
+                    <!--</div>-->
+                    <!--</div>-->
                     <!--</div>-->
                     <!--<div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">-->
-                        <!--<div class="row" style="margin-bottom: 0px">-->
-                            <!--<div class="col-sm-1" style="padding-left: 0px">-->
-                                <!--<img src="/images/icons/movie.png">-->
-                            <!--</div>-->
-                            <!--<div class="col-sm-10">-->
-                                <!--<h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>-->
-                                <!--<p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">-->
-                                    <!--<img src="/images/icons/timer.png">&nbsp;<span-->
-                                        <!--style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;-->
-                                    <!--<img src="/images/icons/eye.png">&nbsp;<span-->
-                                        <!--style="margin-top: 5px; font-weight: 500">12K</span>-->
-                                <!--</p>-->
-                            <!--</div>-->
-                            <!--<div class="col-sm-1">-->
-                                <!--<img src="/images/icons/arrow-right-drop-circle-green.png">-->
-                            <!--</div>-->
-                        <!--</div>-->
+                    <!--<div class="row" style="margin-bottom: 0px">-->
+                    <!--<div class="col-sm-1" style="padding-left: 0px">-->
+                    <!--<img src="/images/icons/movie.png">-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-10">-->
+                    <!--<h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>-->
+                    <!--<p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">-->
+                    <!--<img src="/images/icons/timer.png">&nbsp;<span-->
+                    <!--style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;-->
+                    <!--<img src="/images/icons/eye.png">&nbsp;<span-->
+                    <!--style="margin-top: 5px; font-weight: 500">12K</span>-->
+                    <!--</p>-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-1">-->
+                    <!--<img src="/images/icons/arrow-right-drop-circle-green.png">-->
+                    <!--</div>-->
+                    <!--</div>-->
                     <!--</div>-->
                     <!--<div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">-->
-                        <!--<div class="row" style="margin-bottom: 0px">-->
-                            <!--<div class="col-sm-1" style="padding-left: 0px">-->
-                                <!--<img src="/images/icons/movie.png">-->
-                            <!--</div>-->
-                            <!--<div class="col-sm-10">-->
-                                <!--<h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>-->
-                                <!--<p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">-->
-                                    <!--<img src="/images/icons/timer.png">&nbsp;<span-->
-                                        <!--style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;-->
-                                    <!--<img src="/images/icons/eye.png">&nbsp;<span-->
-                                        <!--style="margin-top: 5px; font-weight: 500">12K</span>-->
-                                <!--</p>-->
-                            <!--</div>-->
-                            <!--<div class="col-sm-1">-->
-                                <!--<img src="/images/icons/arrow-right-drop-circle-green.png">-->
-                            <!--</div>-->
-                        <!--</div>-->
+                    <!--<div class="row" style="margin-bottom: 0px">-->
+                    <!--<div class="col-sm-1" style="padding-left: 0px">-->
+                    <!--<img src="/images/icons/movie.png">-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-10">-->
+                    <!--<h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>-->
+                    <!--<p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">-->
+                    <!--<img src="/images/icons/timer.png">&nbsp;<span-->
+                    <!--style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;-->
+                    <!--<img src="/images/icons/eye.png">&nbsp;<span-->
+                    <!--style="margin-top: 5px; font-weight: 500">12K</span>-->
+                    <!--</p>-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-1">-->
+                    <!--<img src="/images/icons/arrow-right-drop-circle-green.png">-->
+                    <!--</div>-->
+                    <!--</div>-->
                     <!--</div>-->
                 </div>
 
             </div>
             <!--<p><b>Materials</b></p>-->
             <!--<div class="row"-->
-                 <!--style="height: auto;background-color: white;box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem;margin-bottom: 30px; padding: 15px">-->
+            <!--style="height: auto;background-color: white;box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem;margin-bottom: 30px; padding: 15px">-->
 
             <!--</div>-->
         </div>
         <div class="col-sm-3">
             <p><b>Teacher</b></p>
-            <div class="row" style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
+            <div class="row"
+                 style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
                 <div class="col-sm-12 text-center">
                     <img id="teacherImage" alt="Tutor Image" src="/images/icons/tutor.png">
                     <p style="color: #848589" id="nameOfTheTeacher"></p>
@@ -213,12 +211,12 @@
 
             <!--<p><b>Reviews</b></p>-->
             <!--<div class="row"-->
-                 <!--style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">-->
+            <!--style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">-->
             <!--</div>-->
 
             <!--<p><b>Doubts</b></p>-->
             <!--<div clas   s="row"-->
-                 <!--style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">-->
+            <!--style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">-->
             <!--</div>-->
         </div>
     </div>
