--- a/public_html/student/mycourses/index.html
+++ b/public_html/student/mycourses/index.html
@@ -36,7 +36,7 @@
             <!--empty for search text box later-->
         </div>
         <div class=" col-sm-1 col-12 align-middle header-links-div"><a
-                class="header-links align-middle" href="#">Library</a></div>
+                class="header-links align-middle" href="http://localhost:4000/library">Library</a></div>
         <div class=" col-sm-1 col-12 align-middle header-links-div"><a
                 class="align-middle header-links" href="#">Events</a></div>
         <div class=" col-sm-1 col-12 align-middle header-links-div"><a
@@ -52,8 +52,8 @@
             <img src="/images/boy.png" class="img-circle header-profile-img">
             &nbsp;&nbsp;<span>John Doe</span> <span class="caret"></span></a>
             <ul class="dropdown-menu header-dropdown-menu">
-                <li class="header-dropdown-menu-li"><a href="#" class="header-links">My Courses</a></li>
-                <li class="header-dropdown-menu-li"><a href="#" class="header-links">My Bookmarks</a></li>
+                <li class="header-dropdown-menu-li"><a href="http://localhost:4000/student/mycourses" class="header-links">My Courses</a></li>
+                <li class="header-dropdown-menu-li"><a href="http://localhost:4000/student/mybookmarks" class="header-links">My Bookmarks</a></li>
                 <li class="header-dropdown-menu-li"><a onclick="logoutfn()" class="header-links" style="color: #999;">Logout</a></li>
             </ul>
         </div>
