--- a/public_html/allMiniCourses/index.html
+++ b/public_html/allMiniCourses/index.html
@@ -14,16 +14,16 @@
     <script src="/js/bootstrap.js"></script>
     <script src="./library.js"></script>
 
-    <!--<script>-->
+    <script>
 
-        <!--let logoutfn = function () {-->
+    let logoutfn = function () {
 
-            <!--$.get('http://localhost:4000/logout', function (student) {-->
-                <!--console.log(student);-->
-                <!--window.location.replace(student);-->
-            <!--});-->
-        <!--}-->
-    <!--</script>-->
+    $.get('http://localhost:4000/logout', function (student) {
+    console.log(student);
+    window.location.replace(student.url);
+    });
+    }
+    </script>
 </head>
 <body>
 
@@ -53,9 +53,12 @@
             <img src="./../images/boy.png" class="img-circle header-profile-img">
             &nbsp;&nbsp;<span>John Doe</span> <span class="caret"></span></a>
             <ul class="dropdown-menu header-dropdown-menu">
-                <li class="header-dropdown-menu-li"><a href="http://localhost:4000/student/mycourses" class="header-links">My Courses</a></li>
-                <li class="header-dropdown-menu-li"><a href="http://localhost:4000/student/mybookmarks" class="header-links">My Bookmarks</a></li>
-                <li class="header-dropdown-menu-li"><a onclick="logoutfn()" class="header-links" style="color: #999;">Logout</a></li>
+                <li class="header-dropdown-menu-li"><a href="http://localhost:4000/student/mycourses"
+                                                       class="header-links">My Courses</a></li>
+                <li class="header-dropdown-menu-li"><a href="http://localhost:4000/student/mybookmarks"
+                                                       class="header-links">My Bookmarks</a></li>
+                <li class="header-dropdown-menu-li"><a onclick="logoutfn()" class="header-links" style="color: #999;">Logout</a>
+                </li>
             </ul>
         </div>
         <!--<div class="col-sm-6 text-right">-->
@@ -86,83 +89,83 @@
         <div class="col-sm-3">
             <div id="allFilters" class="row filter-column">
                 <!--<div class="filter-column-divs">-->
-                    <!--<div class="filter-column-divs-heading"><b>EXAMINATION</b></div>-->
-                    <!--<div class="filter-column-divs-content">-->
-                        <!--<label class="label-style">-->
-                            <!--<input name="examination" value="" type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Mains<br/>-->
-                        <!--</label>-->
-                        <!--<br>-->
-                        <!--<label class="label-style">-->
-                            <!--<input name="examination" value="" type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Advanced<br/>-->
-                        <!--</label>-->
-                        <!--<br>-->
-                        <!--<label class="label-style">-->
-                            <!--<input name="examination" type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;CBSE<br>-->
-                        <!--</label>-->
-                        <!--<br>-->
-                    <!--</div>-->
+                <!--<div class="filter-column-divs-heading"><b>EXAMINATION</b></div>-->
+                <!--<div class="filter-column-divs-content">-->
+                <!--<label class="label-style">-->
+                <!--<input name="examination" value="" type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Mains<br/>-->
+                <!--</label>-->
+                <!--<br>-->
+                <!--<label class="label-style">-->
+                <!--<input name="examination" value="" type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Advanced<br/>-->
+                <!--</label>-->
+                <!--<br>-->
+                <!--<label class="label-style">-->
+                <!--<input name="examination" type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;CBSE<br>-->
+                <!--</label>-->
+                <!--<br>-->
+                <!--</div>-->
                 <!--</div>-->
                 <!--<div class="filter-column-divs">-->
-                    <!--<div class="filter-column-divs-heading"><b>SUBJECT</b>-->
-                    <!--</div>-->
-                    <!--<div class="filter-column-divs-content">-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Mathematics<br/>-->
-                        <!--</label>-->
-                        <!--<br>-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Physics<br>-->
-                        <!--</label>-->
-                        <!--<br>-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Chemistry<br>-->
-                        <!--</label>-->
-                    <!--</div>-->
+                <!--<div class="filter-column-divs-heading"><b>SUBJECT</b>-->
+                <!--</div>-->
+                <!--<div class="filter-column-divs-content">-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Mathematics<br/>-->
+                <!--</label>-->
+                <!--<br>-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Physics<br>-->
+                <!--</label>-->
+                <!--<br>-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Chemistry<br>-->
+                <!--</label>-->
+                <!--</div>-->
                 <!--</div>-->
                 <!--<div class="filter-column-divs">-->
-                    <!--<div class="filter-column-divs-heading"><b>CLASS</b></div>-->
-                    <!--<div class="filter-column-divs-content">-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XI<br/>-->
-                        <!--</label>-->
-                        <!--<br>-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XII<br>-->
-                        <!--</label>-->
-                        <!--<br>-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XII +<br>-->
-                        <!--</label>-->
-                    <!--</div>-->
+                <!--<div class="filter-column-divs-heading"><b>CLASS</b></div>-->
+                <!--<div class="filter-column-divs-content">-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XI<br/>-->
+                <!--</label>-->
+                <!--<br>-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XII<br>-->
+                <!--</label>-->
+                <!--<br>-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XII +<br>-->
+                <!--</label>-->
+                <!--</div>-->
                 <!--</div>-->
                 <!--<div class="filter-column-divs">-->
-                    <!--<div class="filter-column-divs-heading"><b>DIFFICULTY</b></div>-->
-                    <!--<div class="filter-column-divs-content">-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Beginner<br/>-->
-                        <!--</label>-->
-                        <!--<br>-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Intermediate<br>-->
-                        <!--</label>-->
-                        <!--<br>-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Advanced<br>-->
-                        <!--</label>-->
-                    <!--</div>-->
+                <!--<div class="filter-column-divs-heading"><b>DIFFICULTY</b></div>-->
+                <!--<div class="filter-column-divs-content">-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Beginner<br/>-->
+                <!--</label>-->
+                <!--<br>-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Intermediate<br>-->
+                <!--</label>-->
+                <!--<br>-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Advanced<br>-->
+                <!--</label>-->
+                <!--</div>-->
                 <!--</div>-->
                 <!--<div class="filter-column-divs">-->
-                    <!--<div class="filter-column-divs-heading"><b>MEDIUM</b></div>-->
-                    <!--<div class="filter-column-divs-content">-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;English<br/>-->
-                        <!--</label>-->
-                        <!--<br>-->
-                        <!--<label class="label-style">-->
-                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Hindi<br>-->
-                        <!--</label>-->
+                <!--<div class="filter-column-divs-heading"><b>MEDIUM</b></div>-->
+                <!--<div class="filter-column-divs-content">-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;English<br/>-->
+                <!--</label>-->
+                <!--<br>-->
+                <!--<label class="label-style">-->
+                <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Hindi<br>-->
+                <!--</label>-->
 
-                    <!--</div>-->
+                <!--</div>-->
                 <!--</div>-->
                 <!--duration filter in the comments section-->
             </div>
@@ -171,9 +174,8 @@
             <div class="row filter-bar">
                 <div class="col-sm-1 filter-bar-title"><b>FILTERS</b></div>
                 <div class="col-sm-9">
-                    <ul class="filter-bar-ul">
-                        <li class="filter-bar-ul-li"><span class="filter-bar-ul-li-filter">Physics</span>
-                        </li>
+                    <ul id="filterTabs" class="filter-bar-ul">
+
                     </ul>
                 </div>
                 <div class="col-sm-2 text-right filter-bar-clearall">CLEAR ALL</div>
