--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -119,7 +119,7 @@
                     <p>|</p>
                 </div>
                 <div class="col-sm-2 text-center" style="padding-top: 13px">
-                    <a id="enrollOrEnrolled" class="btn btn-success text-uppercase"
+                    <a id="enroll" class="btn btn-success text-uppercase"
                        style="background-color:#4bca81;padding: 10px 45px;color: white;font-size: 12px;font-weight: 700;cursor: pointer;width: auto;border-radius: 100px">Enroll</a>
                 </div>
             </div>
