--- a/public_html/student/mybookmarks/index.html
+++ b/public_html/student/mybookmarks/index.html
@@ -25,7 +25,8 @@
             <!--empty for search text box later-->
         </div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
-                class="header-links align-middle" style="text-align: center; color: #999" href="http://localhost:4000/library">Library</a></div>
+                class="header-links align-middle" style="text-align: center; color: #999"
+                href="http://localhost:4000/library">Library</a></div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
                 class="align-middle header-links" style="text-align: center; color: #999" href="#">Events</a></div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
@@ -74,7 +75,8 @@
                 <div class="col-xs-12 col-sm-6 offset-3 text-center">
                     <h1 style="color: floralwhite" id="miniCourseName">My Bookmarks</h1>
                     <br>
-                    <p id="miniCourseDescription" style="color: floralwhite; font-size: x-large">Browse all the lessons that you bookmarked</p>
+                    <p id="miniCourseDescription" style="color: floralwhite; font-size: x-large">Browse all the lessons
+                        that you bookmarked</p>
 
                 </div>
             </div>
@@ -86,70 +88,14 @@
 <div class="container" style="margin-top: 30px">
 
 
-
     <div class="row" style="margin-top: 35px;">
         <div class="col-sm-10 offset-1">
             <p><b>Lectures</b></p>
             <div>
                 <div id="lectures" class="row"
                      style="background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem; margin-bottom: 30px">
-                    <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
-                    <div class="row" style="margin-bottom: 0px">
-                    <div class="col-sm-1" style="padding-left: 0px">
-                    <img src="/images/icons/movie.png">
-                    </div>
-                    <div class="col-sm-10">
-                    <h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>
-                    <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
-                    <img src="/images/icons/timer.png">&nbsp;<span
-                    style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;
-                    <img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"
-                    style="margin-top: 5px; font-weight: 500">12K</span>
-                    </p>
-                    </div>
-                    <div class="col-sm-1">
-                    <img src="/images/icons/arrow-right-drop-circle-green.png">
-                    </div>
-                    </div>
-                    </div>
-                    <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
-                    <div class="row" style="margin-bottom: 0px">
-                    <div class="col-sm-1" style="padding-left: 0px">
-                    <img src="/images/icons/movie.png">
-                    </div>
-                    <div class="col-sm-10">
-                    <h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>
-                    <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
-                    <img src="/images/icons/timer.png">&nbsp;<span
-                    style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;
-                    <img src="/images/icons/eye.png">&nbsp;<span
-                    style="margin-top: 5px; font-weight: 500">12K</span>
-                    </p>
-                    </div>
-                    <div class="col-sm-1">
-                    <img src="/images/icons/arrow-right-drop-circle-green.png">
-                    </div>
-                    </div>
-                    </div>
-                    <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
-                    <div class="row" style="margin-bottom: 0px">
-                    <div class="col-sm-1" style="padding-left: 0px">
-                    <img src="/images/icons/movie.png">
-                    </div>
-                    <div class="col-sm-10">
-                    <h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>
-                    <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
-                    <img src="/images/icons/timer.png">&nbsp;<span
-                    style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;
-                    <img src="/images/icons/eye.png">&nbsp;<span
-                    style="margin-top: 5px; font-weight: 500">12K</span>
-                    </p>
-                    </div>
-                    <div class="col-sm-1">
-                    <img src="/images/icons/arrow-right-drop-circle-green.png">
-                    </div>
-                    </div>
-                    </div>
+
+
                 </div>
 
             </div>
